# sightings_ecosystem

./: .gitignore  .hadolint.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  HOW_TO_RUN.md  Makefile  README.md  dataModel.md  data_model.md  direct_software_template.json  direct_technique_template.json  docker-compose.yml  indirect_software_template.json  pyproject.toml  setup.cfg
.github/workflows/: build-push-container.yml  delete-web-preview.yml  linter.yml  sphinx.yml  test.yml
data/: data_model.md  formated_text.json  sightings2-schema.json  smaller_formatted_text.json  test.json
docs/: Additional Analysis.rst  Defenses in Summary.rst  Get Involved.rst  Lessons Learned.rst  Sightings Ecosystem in the Future.rst  Technique Co-Occurrences.rst  Top 15 Techniques.rst  additional-analysis.rst  background.rst  conf.py  data-contributors.rst  data-model.rst  defenses-in-summary.rst  get-involved.rst  index.rst  introduction.rst  key-results.rst  lessons-learned.rst  overview.rst  technique-co-occurrences.rst  top-15-techniques.rst
docs/_static/: ctid_logo_white.xcf
docs/_static/css/: ctid.css  sightings.css
docs/_templates/: breadcrumbs.html  footer.html  header.html  layout.html
requirements/: analysis-requirements.txt  pipeline-requirements-ci.txt  pipeline-requirements.txt
src/analysis/: Dockerfile  sightings_dash.ipynb  sightings_dash.py
src/analysis/.ipynb_checkpoints/: sightings_dash-checkpoint.ipynb
src/analysis/helper_functions/: count_main_tid.ipynb  rules_object.ipynb
src/analysis/support_files/: barcharts_object.ipynb  barcharts_object.py  rule_mining_sequences.ipynb  rule_mining_sequences.py  sightings_dash_styles.json  (+2 more)
src/pipeline/: Dockerfile  Untitled.ipynb  pipeline.py  util.ipynb  util.py
src/validator/: sighting.json  sighting_array.json  sighting_array_bad.json  sighting_array_hash_missing.json  sighting_array_raw.json  sighting_schema.json  validator.py
tests/analysis/: test_rules_object.py
tests/pipeline/: test_db.py  test_pipeline.py  test_sighting.py  test_technique.py  test_transformer.py  test_util.py  test_validator.py
uploaders/linux/: README.md
uploaders/mac/: README.md
uploaders/win/: README.md
(+26 files in other folders)
